force-app/src/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Membership_Engagement_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-206 &quot;As MET we want to be able to track and report on the date and status of an engagement visit a School has set with an SSEO including when there are postponements.&quot;</description>
        <label>Membership Engagement Visit</label>
        <referenceTo>Engagement_Activity__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Original_Start_Date__c</fullName>
        <label>Membership Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Rejoin_Date__c</fullName>
        <label>Membership Rejoin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Renewal_Count__c</fullName>
        <label>Membership Renewal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Renewal_Date__c</fullName>
        <label>Membership Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospective</fullName>
                    <default>true</default>
                    <label>Prospective</label>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Membership Withdrawn by Member</fullName>
                </value>
                <value>
                    <fullName>Membership Withdrawn by CIS</fullName>
                </value>
                <value>
                    <fullName>Application Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Withdrawal_Date__c</fullName>
        <label>Membership Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Middle_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Middle  School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ministry_of_Education_MoE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ministry of Education (MoE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission_goals_for_internationalisation__c</fullName>
        <label>Mission/ goals for internationalisation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Campuses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if your school has more than one campus or site.</inlineHelpText>
        <label>Multiple Campuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_School_Group__c</fullName>
        <inlineHelpText>If your school is legally part of a group, organisation or company of schools, indicate the name of the group, organisation or company. If your group is not listed, please email membership@cois.org.</inlineHelpText>
        <label>Name of School Group (if applicable)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS International Schools, UK</fullName>
                </value>
                <value>
                    <fullName>Brent International Schools, Philippines</fullName>
                </value>
                <value>
                    <fullName>British Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>Chadwick International</fullName>
                </value>
                <value>
                    <fullName>Cognita</fullName>
                </value>
                <value>
                    <fullName>Dulwich College International</fullName>
                </value>
                <value>
                    <fullName>Dwight Schools</fullName>
                </value>
                <value>
                    <fullName>English Modern Schools, Qatar</fullName>
                </value>
                <value>
                    <fullName>English Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>ESOL Education</fullName>
                </value>
                <value>
                    <fullName>FEYZİYE MEKTEPLERİ VAKFI IŞIK</fullName>
                </value>
                <value>
                    <fullName>GEMS, UAE</fullName>
                </value>
                <value>
                    <fullName>Harrow International Schools</fullName>
                </value>
                <value>
                    <fullName>International Schools Group</fullName>
                </value>
                <value>
                    <fullName>Nazarbayev Intellectual Schools</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia Education</fullName>
                </value>
                <value>
                    <fullName>Orbital Education</fullName>
                </value>
                <value>
                    <fullName>Pathways Schools, India</fullName>
                </value>
                <value>
                    <fullName>Qatar Academies</fullName>
                </value>
                <value>
                    <fullName>SEK Schools, Spain</fullName>
                </value>
                <value>
                    <fullName>SEV Schools, Turkey</fullName>
                </value>
                <value>
                    <fullName>Sinav Koleji</fullName>
                </value>
                <value>
                    <fullName>Taaleem Schools</fullName>
                </value>
                <value>
                    <fullName>Tenby Schools, Malaysia</fullName>
                </value>
                <value>
                    <fullName>United World Colleges</fullName>
                </value>
                <value>
                    <fullName>Wellington College China</fullName>
                </value>
                <value>
                    <fullName>Yew Chung Schools</fullName>
                </value>
                <value>
                    <fullName>Presidential Schools of Uzbekistan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>News_Check__c</fullName>
        <inlineHelpText>A review of the institution in recent news articles and public platforms. Any notable remarks are noted for review either internally, or where significant, addressed with the institution directly as we process the institution’s application.</inlineHelpText>
        <label>News Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_faculty_working_days__c</fullName>
        <label>Number of faculty working days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_students_contact_days__c</fullName>
        <label>Number of students contact days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oldest_age_for_leaving_or_graduating__c</fullName>
        <label>Oldest age for leaving or graduating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_degree_awarded_by_institution__c</fullName>
        <description>Used to collect information gathered in the Membership Eligibility form for universities</description>
        <label>Own degree awarded by institution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_option__c</fullName>
        <description>Displays the payment options choice of the institution</description>
        <label>OBSOLETE Payment option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Wire transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryElementary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary/Elementary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_Admission_Criteria_Process_7__c</fullName>
        <inlineHelpText>Admissions criteria that are published to prospective parents and internal admission process (when/why children are [not] accepted) showing the criteria are transparent.</inlineHelpText>
        <label>Published Admission Criteria&amp;Process (7)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_CIS_Membership__c</fullName>
        <label>Reason for CIS Membership</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recognition_by_MoE_or_national_body__c</fullName>
        <label>Recognition by MoE or national body</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Religious_Affiliation__c</fullName>
        <label>Religious Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Islamic</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>Non-denominational</fullName>
                </value>
                <value>
                    <fullName>None/independent</fullName>
                </value>
                <value>
                    <fullName>Other Christian</fullName>
                </value>
                <value>
                    <fullName>Other Religious Affiliation</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Reviewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Associate Director responsible for reviewing and approving the External Accreditation Report. 

Any areas of concern should be noted in remarks and/or addressed with the school as necessary.</inlineHelpText>
        <label>Report Reviewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memberships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_budget_current_next_years_3__c</fullName>
        <inlineHelpText>The school’s budget for 2 years (current and next fiscal year).</inlineHelpText>
        <label>School budget - current &amp; next years (3)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SeniorHigh_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior/High School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Starting_Month__c</fullName>
        <label>Starting Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_to_Active__c</fullName>
        <label>Status to Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Enrollment_Gender__c</fullName>
        <label>Student Enrollment Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coeducational</fullName>
                </value>
                <value>
                    <fullName>Only Male</fullName>
                </value>
                <value>
                    <fullName>Only Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Perspective_Video_14__c</fullName>
        <inlineHelpText>A video made by students to showcase the school from the student perspective. The video should give an example of learning across the age ranges, show student voice, and also the facilities in the school. The video should be 30 minutes or less. 

If video is not available, flag and follow-up with the school to understand why.</inlineHelpText>
        <label>Student Perspective Video (14)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_support_prog_serv_Int_Students__c</fullName>
        <label>Student Support &amp; Int’l Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supporting_Documentation_Remarks__c</fullName>
        <label>Supporting Documentation Remarks</label>
        <length>8000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Teaching_Non_Teaching_Contracts_6__c</fullName>
        <inlineHelpText>Exemplars of two contracts (teaching &amp; non-teaching or international &amp; national hires) showing the school has ethical hiring practices.</inlineHelpText>
        <label>Teaching &amp; Non-Teaching Contracts (6)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_Students__c</fullName>
        <label>Total Number Students</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_years_of_education__c</fullName>
        <label>Total years of education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_of_lanuage_of_institution_1__c</fullName>
        <label>% Usage of lanuage of institution 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_of_lanuage_of_institution_2__c</fullName>
        <label>% Usage of lanuage of institution 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_of_lanuage_of_institution_3__c</fullName>
        <label>% Usage of lanuage of institution 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_to_Date__c</fullName>
        <inlineHelpText>This represents the date when the school’s external accreditation is due for renewal. We track this date to ensure timely follow-up with the school and to receive the external accreditation report. This ensures the school’s ongoing eligibility for membership.</inlineHelpText>
        <label>Valid to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Website_Check__c</fullName>
        <inlineHelpText>A review of the institution’s website which includes alignment between data shared in the membership application and the website such as leadership, address, and educational offering for validation purposes.</inlineHelpText>
        <label>Website Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete with Remark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withdrawal_Reason__c</fullName>
        <label>Withdrawal Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Lack of Value</fullName>
                </value>
                <value>
                    <fullName>Not using services</fullName>
                </value>
                <value>
                    <fullName>Institutional needs changed</fullName>
                </value>
                <value>
                    <fullName>CIS offerings changed</fullName>
                </value>
                <value>
                    <fullName>Leadership change at institution</fullName>
                </value>
                <value>
                    <fullName>Breach of Membership Terms</fullName>
                </value>
                <value>
                    <fullName>Permanently closed</fullName>
                </value>
                <value>
                    <fullName>Merged with another institution</fullName>
                </value>
                <value>
                    <fullName>Changing accreditation agencies</fullName>
                </value>
                <value>
                    <fullName>Lack of budget</fullName>
                </value>
                <value>
                    <fullName>Change in Government/Country Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youngest_enrollment_age__c</fullName>
        <label>Youngest enrollment age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEligibleForRenewal__c</fullName>
        <description>The membership is eligible for renewal within three months before renewal date</description>
        <formula>ISPICKVAL(Membership_Status__c, &apos;Active&apos;) &amp;&amp; 
!ISPICKVAL(Application_Status__c,&apos;Renewal&apos;) &amp;&amp;
(TODAY() &gt;= ADDMONTHS(Membership_Renewal_Date__c, -3) &amp;&amp; TODAY() &lt;= Membership_Renewal_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The membership is eligible for renewal within three months before renewal date</inlineHelpText>
        <label>Eligible for Renewal</label>
        <type>Checkbox</type>
    </fields>
    <label>Membership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Membership_Status__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Membership_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Memberships_with_appl_status_renewed</fullName>
        <columns>Account_Name__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Membership_Renewal_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Membership_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <label>Memberships with appl status: renewal</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>